--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
 }
 
 dependencies {
+    // stringee
+    implementation 'com.stringee.sdk.android:stringee-android-sdk:2.0'
+    implementation 'com.android.volley:volley:1.2.1'
+
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
             because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
