done call function

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
 android {
     compileSdk 33
 
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         applicationId "com.example.fimae"
         minSdk 21
