--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
 
     compileOptions {
@@ -40,6 +41,10 @@ dependencies {
     // stringee
     implementation 'com.stringee.sdk.android:stringee-android-sdk:2.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'com.lokiy.databinding:databinding:0.1.4'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
