--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,10 @@
 
         <meta-data
                 android:name="com.google.android.actions"
-                android:resource="@drawable/gender_border"/>
+                android:resource="@drawable/shape_gender_border_blue"/>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
                 android:name=".activities.ChatActivity"
