--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src\\main\\res',
+                        'src\\main\\res\\layouts\\home',
+                        'src\\main\\res\\layouts\\chat',
+                        'src\\main\\res\\layouts\\feed',
+                        'src\\main\\res\\layouts\\profile'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -45,6 +56,8 @@ dependencies {
     implementation 'com.lokiy.databinding:databinding:0.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
@@ -76,7 +89,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
