--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,59 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.fimae">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.example.fimae">
     <!-- permission cho việc kết nối internet -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- permission cho cuộc gọi -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- Nếu sử dụng class StringeeAudioManager của Stringee quản lý phát âm thanh thì cần thêm các permission này -->
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!-- permission cho cuộc gọi -->
+    <uses-permission
+            android:name="android.permission.RECORD_AUDIO"/> <!-- Nếu sử dụng class StringeeAudioManager của Stringee quản lý phát âm thanh thì cần thêm các permission này -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
 
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Fimae"
-        tools:targetApi="31">
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Fimae"
+            tools:targetApi="31">
         <activity
-            android:name=".activities.WaitingActivity"
-            android:exported="false" />
+                android:name=".activities.OnChatActivity"
+                android:exported="false"/>
+        <activity
+                android:name=".activities.WaitingActivity"
+                android:exported="false"/>
 
         <meta-data
-            android:name="com.google.android.actions"
-            android:resource="@drawable/shape_gender_border_blue" />
+                android:name="com.google.android.actions"
+                android:resource="@drawable/shape_gender_border_blue"/>
         <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+                android:name="preloaded_fonts"
+                android:resource="@array/preloaded_fonts"/>
 
         <activity
-            android:name=".activities.ChatActivity"
-            android:exported="false"
-            android:label="@string/title_activity_chat"
-            android:theme="@style/Theme.Fimae.NoActionBar" />
+                android:name=".activities.ChatActivity"
+                android:exported="false"
+                android:label="@string/title_activity_chat"
+                android:theme="@style/Theme.Fimae.NoActionBar"/>
         <activity
-            android:name=".activities.ConnectActivity"
-            android:exported="false" />
+                android:name=".activities.ConnectActivity"
+                android:exported="false"/>
         <activity
-            android:name=".activities.CallVideoActivity"
-            android:exported="false" />
+                android:name=".activities.CallVideoActivity"
+                android:exported="false"/>
         <activity
-            android:name=".activities.CallActivity"
-            android:exported="false" />
+                android:name=".activities.CallActivity"
+                android:exported="false"/>
         <activity
-            android:name=".activities.MainActivity"
-            android:exported="true">
+                android:name=".activities.MainActivity"
+                android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
