Hoàn thành sơ sơ chat ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
