--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
             android:theme="@style/Theme.Fimae"
             tools:targetApi="31">
         <activity
+                android:name=".activities.UpdateProfileActivity"
+                android:exported="false"/>
+        <activity
                 android:name=".SplashActivity"
                 android:exported="true">
             <intent-filter>
@@ -49,7 +52,6 @@
         <activity
                 android:name=".activities.AuthenticationActivity"
                 android:exported="true">
-
         </activity>
         <activity
                 android:name=".activities.OnChatActivity"
