--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'com.lokiy.databinding:databinding:0.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
