add setting bottom sheet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
-            android:name=".ChatRandomActivity"
+            android:name=".activities.ChatRandomActivity"
             android:exported="false" />
 
         <provider
@@ -54,7 +54,7 @@
             android:name=".activities.UpdateProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
