--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@ android {
     dataBinding {
         enabled = true
     }
-
     defaultConfig {
         applicationId "com.example.fimae"
         minSdk 24
@@ -28,8 +27,8 @@ android {
     }
 
     buildFeatures {
-        dataBinding true
         viewBinding true
+        dataBinding true
     }
 
     compileOptions {
@@ -50,6 +49,7 @@ android {
 }
 
 dependencies {
+
     // firebase
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-database:20.2.1'
@@ -63,15 +63,15 @@ dependencies {
     implementation 'com.lokiy.databinding:databinding:0.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'androidx.emoji2:emoji2:1.1.0'
-    implementation 'com.vanniktech:emoji:0.16.0'
-
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.google.firebase:firebase-firestore:24.5.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-
+//    implementation "androidx.emoji:emoji:28.0.0"
+//    implementation "com.vanniktech:emoji-facebook:0.16.0"
     implementation 'com.auth0:java-jwt:4.4.0'
 
     constraints {
