--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
+            android:name=".FimaeApp"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
@@ -54,7 +55,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <action android:name="android.media.action.IMAGE_CAPTURE"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -79,20 +79,20 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Fimae"
-        tools:targetApi="31">
+<!--        android:allowBackup="true"-->
+<!--        android:dataExtractionRules="@xml/data_extraction_rules"-->
+<!--        android:fullBackupContent="@xml/backup_rules"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        android:label="@string/app_name"-->
+<!--        android:roundIcon="@mipmap/ic_launcher_round"-->
+<!--        android:supportsRtl="true"-->
+<!--        android:theme="@style/Theme.Fimae"-->
+<!--        tools:targetApi="31">-->
         <activity
             android:name=".activities.WaitingActivity"
             android:exported="false" />
-                android:name=".activities.WaitingActivity"
-                android:exported="false"/>
+<!--                android:name=".activities.WaitingActivity"-->
+<!--                android:exported="false"/>-->
 
         <meta-data
                 android:name="com.google.android.actions"
@@ -101,11 +101,11 @@
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts"/>
 
-        <activity
-            android:name=".activities.ChatActivity"
-            android:exported="false"
-            android:label="@string/title_activity_chat"
-            android:theme="@style/Theme.Fimae.NoActionBar" />
+<!--        <activity-->
+<!--            android:name=".activities.ChatActivity"-->
+<!--            android:exported="false"-->
+<!--            android:label="@string/title_activity_chat"-->
+<!--            android:theme="@style/Theme.Fimae.NoActionBar" />-->
         <activity
                 android:name=".activities.ConnectActivity"
                 android:exported="false"/>
