--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,11 @@ dependencies {
 
     // firebase
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
-    implementation 'com.google.firebase:firebase-database:20.2.1'
+    implementation 'com.google.firebase:firebase-database:20.2.2'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.android.gms:play-services-auth:20.5.0'
-    implementation 'com.google.firebase:firebase-firestore:22.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
@@ -64,14 +64,14 @@ dependencies {
     // stringee
     implementation 'com.stringee.sdk.android:stringee-android-sdk:2.0'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.6.0'
     implementation 'com.lokiy.databinding:databinding:0.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment:2.6.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation 'com.google.firebase:firebase-firestore:24.5.0'
-    implementation 'com.google.firebase:firebase-storage:20.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.1'
+    implementation 'com.google.firebase:firebase-storage:20.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
@@ -79,6 +79,8 @@ dependencies {
 //    implementation "androidx.emoji:emoji:28.0.0"
 //    implementation "com.vanniktech:emoji-facebook:0.16.0"
     implementation 'com.auth0:java-jwt:4.4.0'
+    //Map
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
