--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,12 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+
+    implementation 'com.mindorks.android:placeholderview:1.0.3'
+    annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
+
+
+
 //    implementation "androidx.emoji:emoji:28.0.0"
 //    implementation "com.vanniktech:emoji-facebook:0.16.0"
     implementation 'com.auth0:java-jwt:4.4.0'
