--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
-
+    repositories {
+        google()
+        jcenter()
+    }
     dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath 'com.google.gms:google-services:4.3.15'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
