--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,14 +36,21 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
+            android:name=".activities.PostContentActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activities.MediaSliderActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.ShortVideoActivity"
             android:exported="false" />
 
         <service android:name=".service.UpdateUserActivityTimeService" />
+
         <activity
             android:name=".activities.SearchUserActivity"
             android:exported="false" />
