--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,8 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-                />
         </activity>
+        <activity
             android:name=".StoryActivity"
             android:exported="false" />
         <activity
