--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
     implementation 'com.google.firebase:firebase-firestore:24.7.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-
+    implementation 'androidx.preference:preference:1.2.0'
 
     implementation 'com.google.firebase:firebase-storage'
     // stringee
