--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,11 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
+            android:name=".SettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.MediaSliderActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.ShortVideoActivity"
             android:exported="false" />
@@ -48,6 +50,7 @@
         <activity
             android:name=".activities.SearchUserActivity"
             android:exported="false" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.fimae.provider"
@@ -87,13 +90,16 @@
             android:name=".activities.OnChatActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.SettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DetailPostActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".activities.ChatRandomActivity"></activity>
+        <activity android:name=".activities.ChatRandomActivity" />
         <activity
             android:name=".activities.PostActivity"
             android:exported="false">
