--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,14 +36,15 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AddShortActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.PostContentActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-            android:name=".SettingActivity"
-            android:exported="false" />
         <activity
             android:name=".activities.StoryActivity"
             android:exported="false" />
