--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 
     implementation 'com.mindorks.android:placeholderview:1.0.3'
+    implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.0'
     annotationProcessor 'com.mindorks.android:placeholderview-compiler:1.0.3'
 
 
