feat: create profile activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
-            android:name=".SettingActivity"
+            android:name=".activities.CreateProfileActivity"
             android:exported="false" />
         <activity
             android:name=".StoryActivity"
@@ -69,9 +69,6 @@
             android:exported="false" />
         <activity
             android:name=".activities.EditProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.UpdateProfileActivity"
             android:exported="false" />
         <activity
             android:name=".activities.ProfileActivity"
