feat: push notification for chat

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     //implementation'com.firebaseui:firebase-ui-database:6.3.0'
     implementation 'com.google.firebase:firebase-database-ktx'
 
+    // one signal
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
     // firebase
     implementation platform('com.google.firebase:firebase-bom:32.0.0')
     implementation 'com.google.firebase:firebase-database:20.2.2'
