--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 
 dependencies {
     // short
+    implementation 'com.github.worker8:radiogroupplus:v1.0.1'
     //implementation'com.firebaseui:firebase-ui-database:6.3.0'
     implementation 'com.google.firebase:firebase-database-ktx'
 
