--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
 dependencies {
     // short
     implementation 'com.github.worker8:radiogroupplus:v1.0.1'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
     //implementation'com.firebaseui:firebase-ui-database:6.3.0'
     implementation 'com.google.firebase:firebase-database-ktx'
 
