--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         android:theme="@style/Theme.Fimae"
         tools:targetApi="31">
         <activity
+            android:name=".activities.DisableUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.AminDetailReportActivity"
             android:exported="false" />
         <activity
